--- a/src/scss/_default.scss
+++ b/src/scss/_default.scss
@@ -115,3 +115,60 @@ address {
         max-width: 1600px;
     }
 }
+.swiper-slide {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    padding: 0;
+    max-width: 100%;
+}
+.swiper-button {
+    background-repeat: no-repeat;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    background-image: url(../assets/icons/slider-arrow.svg);
+    background-position: center center;
+    background-size: 12px 18px;
+    position: absolute;
+    cursor: pointer;
+    top: 50%;
+    &:hover {
+        background-color: #dfd4eb;
+    }
+    @include tablet {
+        width: 50px;
+        height: 50px;
+        background-size: 15px 25px;
+    }
+
+    &_prev {
+        transform: translateY(-50%) rotate(180deg);
+        left: 0;
+        @include tablet {
+            top: 42%;
+        }
+        @include laptop {
+            top: 42%;
+        }
+        @include desktop {
+            left: 50px;
+            top: 42%;
+        }
+    }
+    &_next {
+        transform: translateY(-50%);
+        right: 0;
+        @include tablet {
+            top: 42%;
+        }
+        @include laptop {
+            top: 42%;
+        }
+        @include desktop {
+            right: 50px;
+            top: 42%;
+        }
+    }
+}
