--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -1,13 +1,7 @@
 <footer class="footer">
     <div class="container">
         <a href="#" class="logo-link footer__logo-link">
-            <img
-                src="../img/logo.svg"
-                alt="logo"
-                class="logo-link__image"
-                width="117"
-                height="44"
-            />
+            <img src="img/logo.svg" alt="logo" class="logo-link__image" width="117" height="44" />
             <span class="logo-link__text"> Производство полуприцепов </span>
         </a>
         <form action="#" class="search-form footer__search-form">
@@ -100,7 +94,7 @@
         <div class="rating footer__rating">
             <div class="rating__common">
                 <img
-                    src="/img/rating_image.png"
+                    src="img/rating_image.png"
                     alt="Yandex image"
                     width="25"
                     height="25"
