--- a/src/components/header.html
+++ b/src/components/header.html
@@ -3,7 +3,7 @@
         <div class="header__row">
             <a href="#" class="logo-link header__logo-link">
                 <img
-                    src="../img/logo.svg"
+                    src="img/logo.svg"
                     alt="logo"
                     class="logo-link__image"
                     width="117"
